--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website1</title>
+     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="موقع يقدم دورات في البرمجة والإلكترونيات">
+  <meta name="keywords" content="تعلم البرمجة, أردوينو, تطوير, html css js">
+  <meta name="author" content="اسم المطور">
+  <meta property="og:title" content="موقع تقني متكامل">
+  <meta property="og:description" content="منصة عربية للدورات التقنية">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://example.com">
+  <meta property="og:image" content="https://example.com/images/share.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="موقع تقني متكامل">
+  <meta name="twitter:description" content="منصة عربية للدورات التقنية">
+  <meta name="twitter:image" content="https://example.com/images/twitter.jpg">
+  <meta name="theme-color" content="#007bff">
+  <title>موقعي | تعلم البرمجة والإلكترونيات</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
